# social-touch-semi-controlled

./: .gitignore  Expt_social-touch-neural - Copy (2).py  Expt_social-touch-neural.py  Expt_social-touch-neural_runSmooth_test.py  Expt_social-touch-videos.py  README.md  dependencies.json  environment.yml  environment_full.yml  environment_mac.yml  packages.txt  pyproject.toml  requirements.txt  requirements_3Dmodel.txt  requirements_3dmodel_3.9.19.txt  requirements_custom.txt  secondary-window-theme.code-workspace
code/: pyproject.toml
code/scripts/: master_pipeline_for_automatic_tasks.py  master_pipeline_for_manual_tasks.py  master_pipeline_forearm_tasks.py  merging_pipeline_neuron_to_kinect_auto.py  postprocess_workflow_kinect_auto.py  preprocess_handmesh_find_scale_factor.py  preprocess_pipeline_extract_forearm_manual.py  preprocess_workflow_kinect_auto.py  preprocess_workflow_kinect_manual.py  preprocess_workflow_kinect_visualisation.py  primary_workflow_kinect_auto.py  sticker_depth_position_check.py  workflow_process_kinect_auto.py  workflow_process_kinect_manual.py
code/scripts/_1_acquisition/: Expt_social-touch-neural.py  Expt_social-touch-videos.py
code/scripts/_2_primary_processing/_1_prepare_configs/: config_manager.py  create_configs.py  create_forearm_configs.py  create_kinect_configs.py
code/scripts/_2_primary_processing/_2_generate_rgb_depth_video/: __init__.py  create_no_background_color_videos.py  extract_color_to_mp4.py  extract_depth_to_tiff.py  generate_mkv_stream_analysis.py  re-encoding_mp4-rgb-videos.py
code/scripts/_3_preprocessing/_1_sticker_tracking/: __init__.py  (+31 more)
code/scripts/_4_merging/: __init__.py  aggregate_blocks_session.py  merge_neural_and_kinect_data.py
code/scripts/_5_postprocessing/: __init__.py  determine_receptive_field.py  set_xyz_reference_from_gestures.py
code/src/acquisition/: arduino_comm.py  expert_interface.py  kinect_comm.py  kinect_comm_mock.py
code/src/primary_processing/: __init__.py
code/src/utils/: __init__.py  generic_signal_processing.py  kinect_mkv_manager.py  load_pyk4a.py  path_tools.py  should_process_task.py  validation.py
(+461 files in other folders)
